Changes made by Durendal Huynh (durendalhuynh@gmail.com).

--- a/Test Button Badge/index.html
+++ b/Test Button Badge/index.html
@@ -26,6 +26,7 @@
         <div class="view-content">
             <h1>Welcome!</h1>
             <a id="skin-change" data-role="button" data-click="app.changeSkin">Flat</a>
+            <a id="badge-test" data-role="button" data-badge="1" data-click="app.badgeClick" data-icon="cart">Badge Test</a>
             <p>
                 Icenium&trade; enables you to build cross-platform device applications regardless of your
                     development platform by combining the convenience of a local development toolset with the
